testsuite/tests/parser/should_fail/readFail044.stderr

readFail044.hs:3:17: error:
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: -this-flag-does-not-exist

readFail044.hs:3:43: error:
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: -nor-does-this-one
